--- a/src/components/Button-Join/buttonJoin.css
+++ b/src/components/Button-Join/buttonJoin.css
@@ -1,19 +1,28 @@
 .btn-join {
     border-radius: 10px;
     background: linear-gradient(90deg, #8B57E9 0%, #4A76E6 100%);
-    width: 221px;
-    height: 80px;
+    width: 110px;
+    height: 40px;
     color: #FFF;
     text-align: center;
-    font-size: 22px;
+    font-size: 13px;
     font-weight: 600;
     border-style: none;
 }
 
-@media (max-width: 1024px) {
+.btn-join-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (min-width: 1024px) {
  .btn-join {
-    width: 160px;
-    height: 60px;
-    font-size: 16px;
+    width: 221px;
+    height: 80px;
+    font-size: 22px;
+ }
+ .btn-join-div {
+    justify-content: flex-start;
  }
 }
