add testimonials component

--- a/src/components/WhySitipay/whysitipay.css
+++ b/src/components/WhySitipay/whysitipay.css
@@ -1,6 +1,6 @@
 .main-why {
     background: radial-gradient(ellipse at center, rgba(139, 120, 224, 0.25) 0%, #F3F3F9 75%);
-    padding-bottom: 170px;
+    /* padding-bottom: 170px; */
 }
 
 .cards-div {
